[gd_scene load_steps=2 format=3 uid="uid://xqfuad6ir0qb"]

[ext_resource type="Script" uid="uid://qibo8xhlk52s" path="res://scenes/ui/quest_log_ui.gd" id="1_abc3c"]

[node name="QuestLogUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abc3c")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nhiệm Vụ Lệnh"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Nhiệm Vụ Đã Nhận"

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestListContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="QuestDetailsPanel" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="QuestTitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer/QuestDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Chọn một nhiệm vụ để xem chi tiết"

[node name="QuestDescriptionLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer/QuestDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "Mô tả nhiệm vụ..."
autowrap_mode = 3

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer/QuestDetailsPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ObjectivesTitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer/QuestDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Mục Tiêu:"

[node name="ObjectivesContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer/QuestDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer/QuestDetailsPanel"]
layout_mode = 2

[node name="RewardsTitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer/QuestDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Phần Thưởng:"

[node name="RewardsContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HSplitContainer/ScrollContainer/QuestDetailsPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="CloseButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 34.0
grow_horizontal = 0
text = "Đóng"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
